--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,45 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME) .class files
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+# Virtual Machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Gradle
+/build/
+/out/
+
+# STS .metadata
+.metadata
+
+# STS target
+target/
+
+# STS .settings
+.settings/
+
+# STS .recommenders
+.recommenders/
+
+# STS .springBeans
+.springBeans/
+
+# STS .sts4-cache
+.sts4-cache/
